# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/filemanagement/app_file_service/app_file_service.gni")

ohos_unittest("file_permission_test") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    cfi = true
    cfi_cross_dso = true
    debug = false
    blocklist = "${app_file_service_path}/cfi_blocklist.txt"
  }

  module_out_path = "filemanagement/app_file_service"
  include_dirs = [
    "include",
    "${app_file_service_path}/tests/mock/file_permission_native/include",
    "//third_party/googletest/include",
  ]
  sources = [
    "${app_file_service_path}/tests/mock/file_permission_native/src/sandbox_mock.cpp",
    "src/file_permission_test.cpp",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "ability_base:zuri",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "app_file_service:fileshare_native",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]
  defines = [ "private = public" ]
  if (sandbox_manarer) {
    external_deps += [ "sandbox_manager:libsandbox_manager_sdk" ]
    defines += [ "SANDBOX_MANAGER" ]
  }
  deps = [
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]
}
