# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/filemanagement/app_file_service/app_file_service.gni")

ohos_unittest("file_uri_ndk_test") {
  module_out_path = "filemanagement/app_file_service"
  include_dirs = [
    "include",
    "${app_file_service_path}/interfaces/kits/ndk/fileuri/include",
    "//third_party/googletest/include",
  ]
  resource_config_file = "../resource/ohos_test.xml"
  sources = [ "file_uri_ndk_test.cpp" ]
  external_deps = [
    "ability_base:zuri",
    "app_file_service:fileuri_native",
    "app_file_service:ohfileuri",
    "c_utils:utils",
    "file_api:filemgmt_libn",
    "hilog:libhilog",
    "init:libbegetutil",
  ]
  deps = [
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]
}
