# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/filemanagement/app_file_service/app_file_service.gni")

ohos_unittest("remote_file_share_test") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  module_out_path = "app_file_service/app_file_service/file_share"
  fuzz_config_file =
      "${app_file_service_path}/test/fuzztest/remotefileshare_fuzzer"
  resource_config_file = "../resource/ohos_test.xml"

  sources = [ "remote_file_share_test.cpp" ]

  include_dirs = [
    "include",
    "../../../interfaces/innerkits/native/remote_file_share/include",
    "../../../interfaces/innerkits/native/remote_file_share/src",
    "${utils_system_safwk_path}/native/include",
    "${path_base}/include",
  ]

  deps = [
    "../../../interfaces/innerkits/native:remote_file_share_native",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "ability_base:zuri",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]
}
