# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/filemanagement/app_file_service/backup.gni")

ohos_unittest("tools_op_test") {
  module_out_path = path_module_out_tests

  sources = [ "tool_help_test.cpp" ]

  deps = [
    "${path_backup}/tests/utils:backup_test_utils",
    "${path_backup}/utils/:backup_utils",
  ]

  external_deps = [ "hilog:libhilog" ]

  use_exceptions = true
}

group("tools_test") {
  testonly = true

  deps = [ ":tools_op_test" ]
}
