# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/filemanagement/app_file_service/backup.gni")

ohos_unittest("backup_tool_test") {
  module_out_path = path_module_out_tests

  sources = [
    "${path_backup_mock}/b_filesystem/b_file_mock.cpp",
    "${path_backup}/tests/mock/backup_kit_inner/b_session_backup_mock.cpp",
    "${path_backup}/tools/backup_tool/src/tools_op.cpp",
    "${path_backup}/tools/backup_tool/src/tools_op_backup.cpp",
    "${path_backup}/tools/backup_tool/src/tools_op_check_sa.cpp",
    "backup_tool/tools_op_backup_test.cpp",
    "backup_tool/tools_op_check_sa_test.cpp",
    "backup_tool/tools_op_test.cpp",
  ]
  sources += backup_mock_proxy_src

  include_dirs = [
    "${path_base}/include",
    "${path_backup}/interfaces/inner_api/native/backup_kit_inner/impl",
    "${path_backup}/interfaces/inner_api/native/backup_kit_inner",
    "${path_backup}/tools/backup_tool/include",
  ]
  include_dirs += backup_mock_utils_include

  deps = [
    "${path_backup}/tests/utils:backup_test_utils",
    "${path_backup}/utils:backup_utils",
    "${path_googletest}:gmock_main",
    "${path_jsoncpp}:jsoncpp",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]
  use_exceptions = true
}

ohos_unittest("backup_tool_restore_test") {
  module_out_path = path_module_out_tests

  sources = [
    "${path_backup_mock}/b_filesystem/b_file_mock.cpp",
    "${path_backup}/tests/mock/backup_kit_inner/b_session_restore_async_mock.cpp",
    "${path_backup}/tests/mock/backup_kit_inner/b_session_restore_mock.cpp",
    "${path_backup}/tools/backup_tool/src/tools_op.cpp",
    "${path_backup}/tools/backup_tool/src/tools_op_restore.cpp",
    "${path_backup}/tools/backup_tool/src/tools_op_restore_async.cpp",
    "backup_tool/tools_op_restore_async_test.cpp",
    "backup_tool/tools_op_restore_test.cpp",
  ]
  sources += backup_mock_proxy_src

  include_dirs = [
    "${path_base}/include",
    "${path_backup}/interfaces/inner_api/native/backup_kit_inner/impl",
    "${path_backup}/interfaces/inner_api/native/backup_kit_inner",
    "${path_backup}/tools/backup_tool/include",
  ]
  include_dirs += backup_mock_utils_include

  deps = [
    "${path_backup}/tests/utils:backup_test_utils",
    "${path_backup}/utils:backup_utils",
    "${path_googletest}:gmock_main",
    "${path_jsoncpp}:jsoncpp",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]
  use_exceptions = true
}

group("backup_test") {
  testonly = true

  deps = [
    ":backup_tool_restore_test",
    ":backup_tool_test",
  ]
}
